# pure-rust-for-android-poc

./: Cargo.toml  README.md
src/: lib.rs
src/support/: gl_bindings.rs  mod.rs
