[package]
name = "linux-android-graphics-prototype"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name="other-version"
path="src/lib.rs"

[lib]
crate-type = ["lib","cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.18.0"
libc = "0.2"
log = "0.4.14"
ndk = "0.6.0"
ndk-context = "0.1.0"
ndk-glue = "0.6.1"
egl="0.2.7"


#[package.metadata.android]
#build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
#
#[package.metadata.android.sdk]
#min_sdk_version = 16
#target_sdk_version = 29
#
[package.metadata.android.application]
debuggable = true
label = "Android Rust POC App"

[package.metadata.android.application.activity]
label = "Main Activity"